--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,16 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>My website lol</title>
+    <title>Jean Michel Backend - Blog</title>
 </head>
 <body>
-    <h1>My Website</h1>
-    <ul>
-        <!-- "A powerful menu"  -->
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a> </li>
-    </ul>
+    <h1>Jean Michel Backend, the one and only</h1>
+    <blockquote>I'm hilarious and you will quote everything I say. Please hit the like button.</blockquote>
+    <button>Like</button>
     <hr>
     <main>
       {%- autoescape false -%}
@@ -19,6 +15,6 @@
       {% endautoescape -%}
     </main>
     <hr>
-    copyright <strong>Myself</strong>
+    copyright <strong>Jean Michel Backend</strong>
 </body>
 </html>
